--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <a href="exercicios/teste.html">00 - Teste</a> |
         <a href="exercicios/texto1.html">01 - Texto 1</a> |
         <a href="exercicios/texto2.html">02 - Texto 2</a> |
-        <a href="exercicios/listas.html">03 - Texto 3</a>
+        <a href="exercicios/listas.html">03 - Lista</a> |
+        <a href="exercicios/listaAninhada.html">04 - Lista Aninhada 4</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
