--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="exercicios/texto2.html">02 - Texto 2</a> |
         <a href="exercicios/listas.html">03 - Lista</a> |
         <a href="exercicios/listaAninhada.html">04 - Lista Aninhada 4</a>
+        <a href="exercicios/links.html">05 - Links</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
