--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="exercicios/listas.html">03 - Lista</a> |
         <a href="exercicios/listaAninhada.html">04 - Lista Aninhada 4</a>
         <a href="exercicios/links.html">05 - Links</a>
+        <a href="exercicios/tabela.html">06 - Tabela</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
