--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <a href="exercicios/texto1.html">01 - Texto 1</a> |
         <a href="exercicios/texto2.html">02 - Texto 2</a> |
         <a href="exercicios/listas.html">03 - Lista</a> |
-        <a href="exercicios/listaAninhada.html">04 - Lista Aninhada 4</a>
-        <a href="exercicios/links.html">05 - Links</a>
-        <a href="exercicios/tabela.html">06 - Tabela</a>
+        <a href="exercicios/listaAninhada.html">04 - Lista Aninhada 4</a> |
+        <a href="exercicios/links.html">05 - Links</a> |
+        <a href="exercicios/tabela.html">06 - Tabela</a> |
+        <a href="exercicios/form/form.html">07 - Formulário</a> |
+        <a href="exercicios/imagens.html">08 - Imagens</a>
     </nav>
     <section id="conteudo"></section>
     <footer>
