--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a href="exercicios/tabela.html">06 - Tabela</a> |
         <a href="exercicios/form/form.html">07 - Formulário</a> |
         <a href="exercicios/imagens.html">08 - Imagens</a>|
-        <a href="exercicios/videos.html">09 - Videos</a>
+        <a href="exercicios/videos.html">09 - Videos</a>|
+        <a href="exercicios/tagsNaoVisuais.html">10 - Tags Não Visuais</a>|
     </nav>
     <section id="conteudo"></section>
     <footer>
